# FreeRDP-pcap

channels/drdynvc/client/: drdynvc_main.c  drdynvc_main.h
channels/encomsp/client/: encomsp_main.c
channels/rdpgfx/client/: rdpgfx_main.c  rdpgfx_main.h
channels/remdesk/client/: remdesk_main.c
client/: .gitignore  CMakeLists.txt
client/Packet/: .gitignore  CMakeLists.txt  ModuleOptions.cmake  RdpDecoder.cpp  RdpDecoder.h  packet.c  packet.h
client/Packet/cli/: CMakeLists.txt  pfreerdp.c  pfreerdp.cpp
client/common/: cmdline.c
include/freerdp/: graphics.h  metrics.h  packet.h  settings.h
include/freerdp/cache/: bitmap.h  persistent.h
include/freerdp/channels/: channels.h  rdpgfx.h
include/freerdp/client/: drdynvc.h  rdpgfx.h
include/freerdp/utils/: pcap.h
libfreerdp/cache/: CMakeLists.txt  bitmap.c  persistent.c
libfreerdp/codec/: clear.c  rfx.c  xcrush.c
libfreerdp/common/: settings.c
libfreerdp/core/: CMakeLists.txt  activation.c  activation.h  capabilities.c  client.c  client.h  connection.c  fastpath.c  gcc.c  mcs.h  metrics.c  nego.c  nego.h  orders.c  packet.c  rdp.c  settings.c  surface.c  surface.h  tcp.c  tcp.h  transport.c
libfreerdp/gdi/: gdi.c  gfx.c  graphics.c
libfreerdp/utils/: pcap.c
pcap/: README.txt  sample.pcap  sfb_rdp.pcap
winpr/libwinpr/utils/: image.c
